# autonomy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.autonomy/: .env  config.yaml  tools.yaml
adapters/: __init__.py
autonomy/: __init__.py  action_gateway.py  agent_loop.py  browser_tools.py  bundled_procedure_skills.py  chrome_api.py  chrome_host.py  cli.py  conversation.py  conversation_responder.py  conversation_router.py  delegation.py  discord_bot.py  learning.py  model.py  models.py  outcome.py  procedure_skills.py  process_tools.py  project_context.py  providers.py  recipes.py  runtime.py  selection.py  skill_curator.py  storage.py  store.py  telegram_bot.py  tools.py  toolsets.py  verification.py  web_tools.py
autonomy/ui/: app.py  (+1 more)
autonomy_core/: __init__.py  core.py  models.py
candidate_selection/: __init__.py  beam_search.py  models.py  penalties.py  scoring.py
chrome-extension/: manifest.json  native-host.example.json  service_worker.js  sidepanel.css  sidepanel.html  sidepanel.js
skill_graph/: __init__.py  models.py  store.py
tests/: test_autonomy_core.py  test_autonomy_model_providers.py  test_autonomy_native_agent_loop.py  test_autonomy_native_chrome_host.py  test_autonomy_native_cli.py  test_autonomy_native_conversation.py  test_autonomy_native_discord_bot.py  test_autonomy_native_learning.py  test_autonomy_native_model.py  test_autonomy_native_outcome.py  test_autonomy_native_procedure_skills.py  test_autonomy_native_recipes.py  test_autonomy_native_runtime.py  test_autonomy_native_selection.py  test_autonomy_native_telegram_bot.py  (+9 more)
(+42 files in other folders)
